--- a/framework/package.json
+++ b/framework/package.json
@@ -85,10 +85,12 @@
     "drizzle-orm": "^0.44.2",
     "@trpc/server": "^11.1.0",
     "next-auth": "^4.24.11",
+    "next": "^15.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "next": "^15.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5",
     "vitest": "^3.2.3"
