--- a/cloud/package.json
+++ b/cloud/package.json
@@ -2,7 +2,7 @@
   "name": "@yobolabs/cloud",
   "version": "1.0.0",
   "private": true,
-  "description": "AWS service wrappers for Yobo Platform",
+  "description": "AWS S3 and cloud service integrations for Yobo Platform",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -14,6 +14,11 @@
       "require": "./dist/index.js",
       "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
+    },
+    "./s3": {
+      "require": "./dist/s3.js",
+      "import": "./dist/s3.mjs",
+      "types": "./dist/s3.d.ts"
     }
   },
   "scripts": {
@@ -27,19 +32,33 @@
     "yobo",
     "aws",
     "s3",
-    "sqs",
-    "ses"
+    "cloud",
+    "storage"
   ],
   "author": "Yobo",
   "license": "PRIVATE",
   "dependencies": {
-    "axios": "^1.7.9"
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/lib-storage": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "tsup": "^8.0.1",
     "typescript": "^5",
     "vitest": "^3.2.3"
+  },
+  "peerDependencies": {
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@aws-sdk/client-s3": {
+      "optional": true
+    },
+    "@aws-sdk/s3-request-presigner": {
+      "optional": true
+    }
   },
   "files": [
     "dist",
