Fixed the issue where the process of obtaining a new token would not be triggered after the token expired.

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,13 @@ npm-debug.log*
 pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-cloud/.npmrc
+
 # Misc
 .cache/
 .temp/
 *.tsbuildinfo.npmrc
 .npmrc
+
+#cloud 
+cloud/.npmrc
+cloud/.serena
