--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yobolabs/core",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Core SDK components, UI primitives, and utilities for Yobo Platform",
   "type": "module",
   "publishConfig": {
@@ -203,8 +203,7 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@libsql/client": "^0.5.0",
-    "@neondatabase/serverless": "^0.9.0",
+    "@neondatabase/serverless": "^0.9.0 || ^0.10.0",
     "@planetscale/database": "^1.16.0",
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.0",
@@ -219,12 +218,11 @@
     "@trpc/client": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "@yobolabs/framework": "^0.2.0",
-    "better-sqlite3": "^9.4.0",
     "class-variance-authority": "^0.7.0",
-    "drizzle-orm": "^0.30.0",
+    "drizzle-orm": "^0.30.0 || ^0.44.0",
     "immer": "^10.0.0",
     "libphonenumber-js": "^1.10.0",
-    "lucide-react": "^0.400.0",
+    "lucide-react": ">=0.400.0",
     "mysql2": "^3.9.0",
     "next": "^15.0.0",
     "next-auth": "^4.24.0",
@@ -232,7 +230,7 @@
     "postgres": "^3.4.0",
     "react": "^18.0.0 || ^19.0.0",
     "react-hook-form": "^7.0.0",
-    "zustand": "^4.4.0"
+    "zustand": "^4.4.0 || ^5.0.0"
   },
   "peerDependenciesMeta": {
     "@yobolabs/framework": {
@@ -309,12 +307,6 @@
     },
     "mysql2": {
       "optional": true
-    },
-    "better-sqlite3": {
-      "optional": true
-    },
-    "@libsql/client": {
-      "optional": true
     }
   },
   "files": [
@@ -339,7 +331,7 @@
     "@types/react": "^19.0.0",
     "@yobolabs/framework": "workspace:*",
     "class-variance-authority": "^0.7.0",
-    "drizzle-orm": "^0.44.0",
+    "drizzle-orm": "^0.44.7",
     "immer": "^10.0.0",
     "libphonenumber-js": "^1.11.0",
     "lucide-react": "^0.436.0",
@@ -350,6 +342,6 @@
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0",
-    "zustand": "^4.4.0"
+    "zustand": "^5.0.9"
   }
 }
