--- a/cloud/package.json
+++ b/cloud/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jetdevs/cloud",
-  "version": "1.0.7-dev",
+  "name": "@yobolabs/cloud",
+  "version": "1.0.8-dev",
   "description": "AWS S3 and cloud service integrations for Jetdevs Platform",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
